# mDNSWindows

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  etc_project.json
mDNSCore/: uDNS.c
mDNSMacOSX/: LegacyNATTraversal.c
mDNSShared/: dnssd_clientstub.c  dnssd_ipc.h
mDNSWindows/: RegNames.h  WinVersRes.h  mDNSWin32.c
mDNSWindows/DLL/: CMakeLists.txt  dll.rc  dllmain.c
mDNSWindows/DLLStub/: CMakeLists.txt  DLLStub.cpp
mDNSWindows/SystemService/: CMakeLists.txt  Service.c  Service.rc
tools/ci/: deploy_to_artifactory.py  deploy_to_github_release.py  etclibtool_config.json  slack_notify.ps1
tools/ci/azure_templates/: deploy_artifact.yml  deploy_artifact_zip.yml
tools/ci/templates/: WinVersRes.h.in  vars.wxi.in
tools/install/: MergeModule.wxs  mDNSInstall.sln  mDNSInstall.wixproj  mDNSInstall_x64.wixproj  mDNSInstall_x86.wixproj  vars.wxi
tools/version/: WinVersRes.h.in  bump_version.bat  bump_version.cmake  create_build.cmake  create_build.py  current_version.txt
tools/version/templates/: WinVersRes.h.in  commit_msg.txt.in  current_version.txt.in  vars.wxi.in
